@@ -1,3 +1,8 @@
+Mon Jun 24 16:51:36 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
+
+	* lib/adlint/cc1/object.rb : Restore scrapped side-effect rollback of
+	  inner-variables.
+
 Fri Jun 21 19:14:39 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
 
 	* lib/adlint/cc1/object.rb : Fix incomplete assignment to the array
